--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>KayXKnight FineArt Photography</h2>
+                        <h2>KayXKnight - FineArt Photography</h2>
                     </div>
                 </div>
                 <div class="img-2" data-aos="fade-up">
@@ -87,7 +87,7 @@
                         
                     </div>
                     <div class="title-1">
-                        <h2>Sabrina Scheltz Fashion Photography</h2>     
+                        <h2>Sabrina Scheltz - Fashion Photography</h2>     
                     </div>
                 </div>
                 <div class="img-3" data-aos="fade-right">
@@ -95,7 +95,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Fidel Namisi Studio Potraiture</h2>
+                        <h2>Fidel Namisi - Studio Potraiture</h2>
                     </div>
                 </div>
                 <div class="img-4" data-aos="fade-left">
@@ -103,7 +103,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Telkom Advert Advertising </h2>    
+                        <h2>Telkom Advert - Advertising Photography</h2>    
                     </div>
                 </div>
                 <div class="img-5" data-aos="fade-down">
@@ -111,7 +111,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Leanne Williams  Advertising photography</h2>    
+                        <h2>Leanne Williams - Advertising photography</h2>    
                     </div>
                 </div>
                 <div class="img-6" data-aos="fade-right">
@@ -119,7 +119,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Sophia Rosemary  Skincare Photography</h2>    
+                        <h2>Sophia Rosemary - Skincare Photography</h2>    
                     </div>
                 </div>
                 <div class="img-7" data-aos="fade-left">
@@ -127,7 +127,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Mcleez Resturant Food Photography</h2>    
+                        <h2>Mcleez Resturant - Food Photography</h2>    
                     </div>
                 </div>
                 <div class="img-8" data-aos="fade-right">
@@ -135,7 +135,7 @@
 
                     </div>
                     <div class="title-1">
-                        <h2>Mchappiness Resturant Food Photography</h2>    
+                        <h2>Mchappiness Resturant - Food Photography</h2>    
                     </div>
                 </div>
 
